[gd_scene load_steps=3 format=3 uid="uid://d4hja1gkrgyr5"]

[ext_resource type="Script" path="res://hub.gd" id="1_y55cj"]
[ext_resource type="FontFile" uid="uid://c16knf1tay8ho" path="res://fonts/Xolonium-Regular.ttf" id="2_xn382"]

[node name="hub" type="CanvasLayer"]
script = ExtResource("1_y55cj")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_xn382")
theme_override_font_sizes/font_size = 56
text = "0"

[node name="Label2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -21.5
offset_right = 175.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_xn382")
theme_override_font_sizes/font_size = 30
text = "Esquiva los enemigos!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="start" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -100.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_xn382")
theme_override_font_sizes/font_size = 20
text = "Sart"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
